[package]
name = "stardust-xr-panel-item"
version = "0.1.0"
edition = "2024"

[features]
default = ["asteroids"]
asteroids = ["dep:stardust-xr-asteroids"]

[dependencies]
stardust-xr-fusion.git = "https://github.com/StardustXR/core"
stardust-xr-asteroids = { git = "https://github.com/StardustXR/asteroids", optional = true }
tokio = { version = "1.49.0", features = ["sync"] }
rustc-hash = "2.1.1"
tracing = "0.1.44"
derive-where = "1.6.0"
derive_setters = "0.1.9"
# gluon-wire.git = "https://github.com/Schmarni-Dev/gluon"
gluon-wire.path = "../gluon/gluon-wire"
# binderbinder.git = "https://github.com/Technobaboo/binderbinder"
binderbinder.path = "../binderbinder"
pion-binder.path = "../pion"
mint = "0.5.9"
rand = "0.10.0"
directories = "6.0.0"

[build-dependencies]
syn = "2"
prettyplease = "0.2"
# gluon-binder.git = "https://github.com/Schmarni-Dev/gluon"
# gluon-codegen-rust.git = "https://github.com/Schmarni-Dev/gluon"
gluon-binder.path = "../gluon"
gluon-codegen-rust.path = "../gluon/gluon-codegen-rust"
# gluon-codegen-rust.git = "https://github.com/Schmarni-Dev/gluon"
