[package]
name = "stardust-xr-panel-item"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["asteroids"]

[dependencies]
stardust-xr-fusion = { git = "https://github.com/StardustXR/core" }
tokio = { version = "1.49.0", features = ["sync"] }
rustc-hash = "2.1.1"
gluon-wire = { git = "https://github.com/technobaboo/gluon" }
binderbinder = { git = "https://github.com/technobaboo/binderbinder" }
mint = "0.5.9"
tracing = "0.1.44"

[build-dependencies]
syn = "2"
prettyplease = "0.2"
gluon-parser = { git = "https://github.com/technobaboo/gluon" }
gluon-codegen-rust = { git = "https://github.com/technobaboo/gluon" }
