[package]
name = "stardust-xr-panel-item-asteroids"
version = "0.1.0"
edition = "2024"

[dependencies]
stardust-xr-fusion = { git = "https://github.com/StardustXR/core" }
stardust-xr-asteroids = { git = "https://github.com/StardustXR/asteroids", optional = true }
tokio = { version = "1.49.0", features = ["sync"] }
rustc-hash = "2.1.1"
derive-where = "1.6.0"
gluon-wire = { git = "https://github.com/technobaboo/gluon" }
binderbinder = { git = "https://github.com/technobaboo/binderbinder" }
pion-binder = { git = "https://github.com/technobaboo/pion" }
mint = "0.5.9"
directories = "6.0.0"

[build-dependencies]
syn = "2"
prettyplease = "0.2"
gluon-parser = { git = "https://github.com/technobaboo/gluon" }
gluon-codegen-rust = { git = "https://github.com/technobaboo/gluon" }
