[package]
name = "stardust-xr-panel-item-asteroids"
version = "0.1.0"
edition = "2024"

[dependencies]
stardust-xr-fusion = { git = "https://github.com/StardustXR/core" }
stardust-xr-asteroids = { git = "https://github.com/StardustXR/asteroids" }
stardust-xr-panel-item.path = ".."
tokio = { version = "1.49.0", features = ["sync"] }
derive-where = "1.6.0"
gluon-wire.workspace = true
binderbinder.workspace = true
pion-binder = { git = "https://github.com/technobaboo/pion" }
directories = "6.0.0"
mint.workspace = true
tracing.workspace = true
rustc-hash = "2.1.2"
